[package]
name = "enginen"
version = "0.1.0"
authors = ["Jonathan Turner <jonathan.d.turner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "0.1.8"
futures = "0.3.5"
async-trait = "0.1.31"
glob = "0.3.0"